--- a/src/app/Books/book-list/book-list.component.html
+++ b/src/app/Books/book-list/book-list.component.html
@@ -2,38 +2,24 @@
 
 <mat-toolbar>My Books | Firestore</mat-toolbar>
 <div class="superContainer" *ngIf="allBooksFirestore != null || allBooksFirestore != undefined">
-    <mat-card class="example-card" *ngFor="let book of allBooksFirestore">
-      <mat-card-header>
-        <img mat-card-avatar src="{{ book.data.imageUrl }}">
-        <mat-card-title>{{ book.data.title }}</mat-card-title>
-        <mat-card-subtitle>{{ book.data.author }}</mat-card-subtitle>
-      </mat-card-header>
-     
-      <a (click)="getBookDetails(book)">
-        <img class="book-img" mat-card-image src="{{ book.data.imageUrl }}">
-      </a>
-     
-      <mat-card-actions class="mat-card-actions">
-          <button mat-button>Price: {{ book.data.price }}</button>
-          <button mat-button>Rate: {{ book.data.rate }}</button>
-          
-          <!-- <button mat-raised-button color="primary" (click)="getBookDetails(book)">
-            <i class="material-icons">visibility</i> Book Details
-          </button> -->
-          <!-- <button mat-raised-button color="accent" (click)="getBookEdit(book)">
-              <i class="material-icons">mode_edit</i> Edit Book
-          </button> -->
-          
-          <a class="a" (click)="getBookDetails(book)">
-            <span class="span">Book Details</span>
-            <span class="span">Click Here</span>
-          </a>
-          <!-- <a class="b" (click)="getBookEdit(book)">
-            <span class="span">Edit Book</span>
-            <span class="span">Click Here</span>
-          </a> -->
-      </mat-card-actions>
-    </mat-card>
+    
+  <div class="box" *ngFor="let book of allBooksFirestore">
+    <h2 class="name">
+      {{ book.data.title }}
+      <br>
+      {{ book.data.author }}
+    </h2>
+
+    <a class="a buy" (click)="getBookDetails(book)">
+      <span class="span">Book Details</span>
+      <span class="span">Click Here</span>
+    </a>
+    
+    <div class="circle"></div>
+    
+    <img (click)="getBookDetails(book)" src="{{ book.data.imageUrl }}" class="product">
+  </div>
+
 </div>
 
 <!-- ----------------------------------------------------------------------------- -->
@@ -41,37 +27,22 @@
 <mat-toolbar>All Books || RealTimeDB</mat-toolbar>
 
 <div class="superContainer">
-    <!-- <mat-card class="example-card" *ngFor="let book of allBooksRealTimeDB"> -->
-      <mat-card class="example-card" *ngFor="let book of allBooksRealTimeDB_v2">
-      <mat-card-header>
-        <img mat-card-avatar src="{{ book.imageUrl }}">
-        <mat-card-title>{{ book.title }}</mat-card-title>
-        <mat-card-subtitle>{{ book.author }}</mat-card-subtitle>
-      </mat-card-header>
-     
-      <a (click)="getBookDetailsRTDB(book)">
-        <img class="book-img" mat-card-image src="{{ book.imageUrl }}">
-      </a>
 
-      <mat-card-actions>
-          <button mat-button>Price: {{ book.price }}</button>
-          <button mat-button>Rate: {{ book.rate }}</button>
-          
-          <!-- <button mat-raised-button color="primary" (click)="getBookDetailsRTDB(book)">
-            <i class="material-icons">visibility</i> Book Details
-          </button> -->
-          <!-- <button mat-raised-button color="accent" (click)="getBookEditRTDB(book)">
-              <i class="material-icons">mode_edit</i> Edit Book
-          </button> -->
-      
-          <a class="a" (click)="getBookDetailsRTDB(book)">
-            <span class="span">Book Details</span>
-            <span class="span">Click Here</span>
-          </a>
-          <!-- <a class="b" (click)="getBookEditRTDB(book)">
-            <span class="span">Edit Book</span>
-            <span class="span">Click Here</span>
-          </a> -->
-        </mat-card-actions>
-    </mat-card>
+  <div class="box" *ngFor="let book of allBooksRealTimeDB_v2">
+    <h2 class="name">
+      {{ book.title }}
+      <br>
+      {{ book.author }}
+    </h2>
+
+    <a class="a buy" (click)="getBookDetailsRTDB(book)">
+      <span class="span">Book Details</span>
+      <span class="span">Click Here</span>
+    </a>
+    
+    <div class="circle"></div>
+    
+    <img (click)="getBookDetailsRTDB(book)" src="{{ book.imageUrl }}" class="product">
+  </div>
+
 </div>
