--- a/src/app/Books/book-list/book-list.component.scss
+++ b/src/app/Books/book-list/book-list.component.scss
@@ -3,17 +3,142 @@
     margin: 15px;
 }
  
+// .superContainer {
+//   padding: 1px;
+//   display: flex;
+//   flex-wrap: wrap;
+//   align-items: center;
+//   justify-content: center;
+// }
+
 .superContainer {
-  padding: 1px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 1200px;
+    transform-style: preserve-3d;
 }
 
 .book-img {
     width: 350px;
     height: 300px;
+}
+
+/******************** Vanilla Tilt *********************/
+.superContainer .box {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    margin: 40px;
+    background: #232323;
+    border-radius: 20px;
+    transform-style: preserve-3d;
+}
+
+.superContainer .box::before {
+    content: 'Vanilla';
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 6em;
+    font-weight: 900;
+    color: #fff;
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.superContainer .box::after {
+    content: 'Tilt';
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    font-size: 5em;
+    font-weight: 900;
+    color: #fff;
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.superContainer .box:hover::before,
+.superContainer .box:hover::after {
+    opacity: 0.04;
+}
+
+.superContainer .box .name {
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    transform-style: preserve-3d;
+    transform: translate3d(0, 0, 75px);
+    transition: 0.5s;
+    opacity: 0;
+    z-index: 10;
+}
+
+.superContainer .box:hover .name {
+    top: 40px;
+    opacity: 1;
+}
+
+.superContainer .box .buy {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform-style: preserve-3d;
+    transform: translate3d(-50%, 0, 75px);
+    color: #fff;
+    background: #333;
+    padding: 10px 25px;
+    border-radius: 30px;
+    text-decoration: none;
+    transition: 0.5s;
+    opacity: 0;
+    z-index: 10;
+}
+
+.superContainer .box:hover .buy {
+    bottom: 30px;
+    opacity: 1;
+}
+
+.superContainer .box .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.5s;
+    background: #fff;
+    transform-style: preserve-3d;
+    z-index: 10;
+    opacity: 0;
+    transform: translate3d(-50%, -50%, 50px);
+}
+
+.superContainer .box .product {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    //max-width: 300px;
+    min-width: 300px;
+    transition: 0.5s;
+    z-index: 11;
+    transform-style: preserve-3d;
+    transform: translate3d(-50%, -50%, 0px);
+    width: 200px;
+    height: 200px;
+}
+
+.superContainer .box:hover .product {
+    transform: translate3d(-50%, -50%, 100px);
 }
 
 /******************** botones chulos ********************/
