--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,50 @@
-<p>footer works!</p>
+<!-- <p>footer works!</p> -->
+
+<footer>
+    <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
+    </div>
+
+    <ul class="social_icon">
+        <li>
+            <a href="#">
+                <span class="icon material-icons">
+                    menu_book
+                </span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="icon material-icons">
+                    people
+                </span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="icon material-icons">
+                    handshake
+                </span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="icon material-icons">
+                    home
+                </span>
+            </a>
+        </li>
+    </ul>
+
+    <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Book List</a></li>
+        <li><a href="#">Customers</a></li>
+        <li><a href="#">Bookings</a></li>
+    </ul>
+
+    <p>©2022 Sergio Díaz | All Rights Reserved</p>
+</footer>
