--- a/src/app/Books/book-details/book-details.component.html
+++ b/src/app/Books/book-details/book-details.component.html
@@ -1,42 +1,24 @@
 <!-- <p>book-details works!</p> -->
 
-<div class="superContainer" *ngIf="esFirestore()">
-    <mat-toolbar> Book Details | Firestore</mat-toolbar>
+<mat-toolbar *ngIf="esFirestore()"> Book Details | Firestore</mat-toolbar>
 
-    <div class="book-details" *ngIf="book">
-        <mat-card>
-            <mat-card-title>
-                <span class="mat-headline">{{book.data.title}}</span>
-            </mat-card-title>
-            <mat-card-content>
-                <div class="left">
-                    <img class="book-imageUrl" src="{{book.data.imageUrl}}" />
-                </div>
-                <div class="right">
-                    <mat-list>
-                        <mat-list-item> <i class="material-icons">person_pin</i> Author:&nbsp;&nbsp;<b> {{book.data.author}}</b>
-                        </mat-list-item>
-                        <mat-list-item> <i class="material-icons">date_range</i> Date Added:&nbsp;&nbsp;<b>
-                                {{book.data.dateadded}}</b> </mat-list-item>
-                        <mat-list-item *ngIf="book.data.dateread"> <i class="material-icons">date_range</i> Date
-                            Read:&nbsp;&nbsp;<b> {{book.data.dateread}}</b> </mat-list-item>
-                        <mat-list-item> <i class="material-icons">attach_money</i> Price:&nbsp;&nbsp;<b> {{book.data.price}}</b>
-                        </mat-list-item>
-                        <mat-list-item *ngIf="book.data.rate"> <i class="material-icons">star</i>
-                            Rate:&nbsp;&nbsp;<b>{{book.data.rate}}</b></mat-list-item>
-                    </mat-list>
-                </div>
-                <hr>
-                <mat-toolbar>Description</mat-toolbar>
-                {{book.data.description}}
-                <p *ngIf="!book.data.description"> No description for this book! </p>
-            </mat-card-content>
+<div class="details" *ngIf="esFirestore()">
+    <div class="card" *ngIf="book">
+        <div class="circle"></div>
+        <div class="content">
+            <h2>{{book.data.title}}</h2>
+            <p>{{book.data.description}}</p>
+            <mat-list>
+                <mat-list-item> <i class="material-icons">person_pin</i> Author:&nbsp;&nbsp;<b> {{book.data.author}}</b>
+                </mat-list-item>
+                <mat-list-item *ngIf="book.data.dateread"> <i class="material-icons">date_range</i> Date
+                    Read:&nbsp;&nbsp;<b> {{book.data.dateread}}</b> </mat-list-item>
+                <mat-list-item> <i class="material-icons">attach_money</i> Price:&nbsp;&nbsp;<b> {{book.data.price}}</b>
+                </mat-list-item>
+                <mat-list-item *ngIf="book.data.rate"> <i class="material-icons">star</i>
+                    Rate:&nbsp;&nbsp;<b>{{book.data.rate}}</b></mat-list-item>
+            </mat-list>
             <mat-card-actions>
-                <!-- <button [routerLink]="['/book-list']" mat-raised-button> <i class="material-icons">view_module</i> All Books</button> -->
-                <!-- <button mat-raised-button class="editButton" (click)="getBookEditFire(book)"> <i class="material-icons">mode_edit</i> Edit </button> -->
-                <!-- <button mat-raised-button color="warn" (click)="getBookDeleteFire(book)"> <i class="material-icons">delete_sweep</i> Delete In Firestore</button> -->
-                <!-- <button mat-raised-button color="warn" (click)="getBookDeleteRTDB(book)"> <i class="material-icons">delete_sweep</i> Delete In RealTimeDB</button> -->
-                
                 <button class="button-details" [routerLink]="['/book-list']"><a routerLinkActive="router-link-active"  style="--clr:#4da9ff;--i:0;"><span>All Books</span></a></button>
                 <button class="button-details" (click)="getBookEditFire(book)" *ngIf="book.prestamo == null; else elseBlock"><a routerLinkActive="router-link-active"  style="--clr:#d6cd52;--i:0;"><span>Edit Book</span></a></button>
                 <ng-template #elseBlock>
@@ -51,57 +33,37 @@
                     <button class="button-details" (click)="finalizarPrestamo(book.prestamo)"><a routerLinkActive="router-link-active"  style="--clr:#d793ff;--i:0;"><span>Devolver Libro</span></a></button>
                 </ng-template>
             </mat-card-actions>
-        </mat-card>
+        </div>
+        <img src="{{book.data.imagePortada}}">
     </div>
-
 </div>
 
 <!-- ---------------------------------------------------------------------------------------------------------------------------------- -->
 
-<div class="superContainer" *ngIf="!esFirestore()">
-    <mat-toolbar> Book Details | RealTimeDB</mat-toolbar>
+<mat-toolbar *ngIf="!esFirestore()"> Book Details | RealTimeDB</mat-toolbar>
 
-    <div class="book-details" *ngIf="book">
-        <mat-card>
-            <mat-card-title>
-                <span class="mat-headline">{{book.title}}</span>
-            </mat-card-title>
-            <mat-card-content>
-                <div class="left">
-                    <img class="book-imageUrl" src="{{book.imageUrl}}" />
-                </div>
-                <div class="right">
-                    <mat-list>
-                        <mat-list-item> <i class="material-icons">person_pin</i> Author:&nbsp;&nbsp;<b> {{book.author}}</b>
-                        </mat-list-item>
-                        <mat-list-item> <i class="material-icons">date_range</i> Date Added:&nbsp;&nbsp;<b>
-                                {{book.dateadded}}</b> </mat-list-item>
-                        <mat-list-item *ngIf="book.dateread"> <i class="material-icons">date_range</i> Date
-                            Read:&nbsp;&nbsp;<b> {{book.dateread}}</b> </mat-list-item>
-                        <mat-list-item> <i class="material-icons">attach_money</i> Price:&nbsp;&nbsp;<b> {{book.price}}</b>
-                        </mat-list-item>
-                        <mat-list-item *ngIf="book.rate"> <i class="material-icons">star</i>
-                            Rate:&nbsp;&nbsp;<b>{{book.rate}}</b></mat-list-item>
-                    </mat-list>
-                </div>
-                <hr>
-                <mat-toolbar>Description</mat-toolbar>
-                {{book.description}}
-                <p *ngIf="!book.description"> No description for this book! </p>
-            </mat-card-content>
+<div class="details" *ngIf="!esFirestore()">
+    <div class="card" *ngIf="book">
+        <div class="circle"></div>
+        <div class="content">
+            <h2>{{book.title}}</h2>
+            <p>{{book.description}}</p>
+            <mat-list>
+                <mat-list-item> <i class="material-icons">person_pin</i> Author:&nbsp;&nbsp;<b> {{book.author}}</b>
+                </mat-list-item>
+                
+                <mat-list-item> <i class="material-icons">attach_money</i> Price:&nbsp;&nbsp;<b> {{book.price}}</b>
+                </mat-list-item>
+                <mat-list-item *ngIf="book.rate"> <i class="material-icons">star</i>
+                    Rate:&nbsp;&nbsp;<b>{{book.rate}}</b></mat-list-item>
+            </mat-list>
             <mat-card-actions>
-                <!-- <button [routerLink]="['/book-list']" mat-raised-button> <i class="material-icons">view_module</i> All Books</button> -->
-                <!-- <button mat-raised-button class="editButton" (click)="getBookEditRTDB(book)"> <i class="material-icons">mode_edit</i> Edit </button> -->
-                <!-- <button mat-raised-button color="warn" (click)="getBookDeleteFire(book)"> <i class="material-icons">delete_sweep</i> Delete In Firestore</button> -->
-                <!-- <button mat-raised-button color="warn" (click)="getBookDeleteRTDB(book)"> <i class="material-icons">delete_sweep</i> Delete In RealTimeDB</button> -->
-
                 <button class="button-details" [routerLink]="['/book-list']"><a routerLinkActive="router-link-active"  style="--clr:#4da9ff;--i:0;"><span>All Books</span></a></button>
                 <button class="button-details" (click)="getBookEditRTDB(book)"><a routerLinkActive="router-link-active"  style="--clr:#d6cd52;--i:0;"><span>Edit Book</span></a></button>
                 <button class="button-details" (click)="getBookDeleteFire(book)"><a routerLinkActive="router-link-active"  style="--clr:#f86464;--i:0;"><span>Delete Fire</span></a></button>
                 <button class="button-details" (click)="getBookDeleteRTDB(book)"><a routerLinkActive="router-link-active"  style="--clr:#ff8f44;--i:0;"><span>Delete RTDB</span></a></button>
-                <!-- <button class="button-details" (click)="getBookDeleteRTDB(book)"><a routerLinkActive="router-link-active"  style="--clr:#d793ff;--i:0;"><span>Booking RTDB</span></a></button> -->
             </mat-card-actions>
-        </mat-card>
+        </div>
+        <img src="{{book.imagePortada}}">
     </div>
-
 </div>
