--- a/src/app/Books/book-list/book-list.component.html
+++ b/src/app/Books/book-list/book-list.component.html
@@ -17,7 +17,7 @@
     
     <div class="circle"></div>
     
-    <img (click)="getBookDetails(book)" src="{{ book.data.imageUrl }}" class="product">
+    <img (click)="getBookDetails(book)" src="{{ book.data.imagePortada }}" class="product">
   </div>
 
 </div>
@@ -42,7 +42,7 @@
     
     <div class="circle"></div>
     
-    <img (click)="getBookDetailsRTDB(book)" src="{{ book.imageUrl }}" class="product">
+    <img (click)="getBookDetailsRTDB(book)" src="{{ book.imagePortada }}" class="product">
   </div>
 
 </div>
