--- a/src/app/Books/edit-book-fire/edit-book-fire.component.html
+++ b/src/app/Books/edit-book-fire/edit-book-fire.component.html
@@ -42,7 +42,7 @@
      
 
       <mat-form-field class="third-width">
-        <input matInput placeholder="Image URL (enter image URL)" type="url" name="imageUrl" id="imageUrl" formControlName="imageUrl" [class]="isValid('imageUrl')" required>
+        <input matInput placeholder="Image URL (enter image URL)" type="url" name="imagePortada" id="imagePortada" formControlName="imagePortada" [class]="isValid('imagePortada')" required>
       </mat-form-field>
       
       <hr>
