--- a/src/app/Books/book-details/book-details.component.scss
+++ b/src/app/Books/book-details/book-details.component.scss
@@ -1,42 +1,3 @@
-.left{float: left}
-.right{float: left; padding: 25px;}
-
-.superContainer {
-    padding: 10px;
-    padding-left: 30px;
-    margin: 10px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.book-details{ 
-    margin: 0 auto; 
-    width: 60%;
-    height: 100vh 
-}
-
-.bookTile{padding:25px auto;}
-.editButton{
-    color :white !important;
-    background-color: rgba(255, 222, 121, 0.96);
-}
-
-.detailsButton{
-    color :white !important;
-    background-color: rgb(114, 168, 255)
-}
-
-.book-imageUrl {
-    width: 345px;
-    height: 350px;
-}
-
-/****************** button effect *****************/
-
-.spacer {
-    flex: 1 1 auto;
-}
-
 a {
     position: relative;
     padding: 4.5px 13px;
@@ -61,6 +22,7 @@ a {
     margin-top: -20px;
     margin-bottom: 20px;
     margin-right: 30px;
+    background: #0065c3;
 }
 
 a:hover {
@@ -123,4 +85,150 @@ a span {
 
 a:hover span {
     opacity: 1;
+}
+
+/************* details_v2 **************/
+
+.details {
+    margin-top: -10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.card {
+    position: relative;
+    // width: 600px;
+    width: 1000px;
+    // height: 350px;
+    height: 600px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    transition: 0.5s;
+}
+
+.card .circle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+
+.card .circle::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #d83131;
+    // clip-path: circle(120px at center);
+    clip-path: circle(210px at center);
+    transition: 0.5s;
+}
+
+.card:hover .circle::before {
+    background: #0065c3;
+    // clip-path: circle(400px at center);
+    clip-path: circle(700px at center);
+}
+
+.card img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 300px;
+    pointer-events: none;
+    transition: 0.5s;
+}
+
+.card:hover img {
+    // left: 72%;
+    left: 80%;
+    height: 500px;
+}
+
+.card .content {
+    position: relative;
+    // width: 50%;
+    width: 60%;
+    left: 20%;
+    // padding: 20px 20px 20px 40px;
+    margin-top: 5%;
+    margin-left: -35%;
+    transition: 0.5s;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.card:hover .content {
+    left: 0;
+    opacity: 1;
+    visibility: visible;
+}
+
+.card .content h2 {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 2em;
+    line-height: 1em;
+    margin-bottom: 5px;
+}
+
+.card .content p {
+    color: #fff;
+}
+
+// .card .content a {
+//     position: relative;
+//     color: #fff;
+//     padding: 10px 20px;
+//     border-radius: 10px;
+//     background: #fff;
+//     color: #111;
+//     margin-top: 10px;
+//     display: inline-block;
+//     text-decoration: none;
+//     font-weight: 700;
+// }
+
+@media (max-width: 991px) 
+{
+    .card {
+        width: auto;
+        min-width: 350px;
+        align-items: flex-start;
+        margin: 10px;
+    }   
+
+    .card:hover {
+        height: 600px;
+    }
+
+    .card .content {
+        width: 100%;
+        left: 0;
+        padding: 30px;
+    }
+
+    .card:hover img {
+        top: 70%;
+        left: 50%;
+        height: 300px;
+    }
+}
+
+@media (max-width: 420px) 
+{
+    .card .content {
+        padding: 20px;
+    }
 }
