--- a/src/app/Books/edit-book-rtdb/edit-book-rtdb.component.html
+++ b/src/app/Books/edit-book-rtdb/edit-book-rtdb.component.html
@@ -28,10 +28,10 @@
      
 
       <mat-form-field class="third-width">
-        <input matInput placeholder="Image URL (enter image URL)" type="url" name="imageUrl" id="imageUrl" formControlName="imageUrl" [class]="isValid('imageUrl')" required>
+        <input matInput placeholder="Image URL (enter image URL)" type="url" name="imagePortada" id="imagePortada" formControlName="imagePortada" [class]="isValid('imagePortada')" required>
       </mat-form-field>
 
-      <img src="{{book.imageUrl}}">
+      <img src="{{book.imagePortada}}">
       
       <hr>
 
