--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,28 +1,38 @@
 <!-- <p>login works!</p> -->
 
-<div class="container">
-    <div class="card text-center">
-        <div class="card-header">
-          <b>Login</b>
-        </div>
-        
-        <div class="card-body p-4">
-            
-            <label style="float: left;">Name</label>
-            <input class="form-control m-2" type="email" placeholder="Introduzca su email" [(ngModel)]="user.email">
-            
-            <label style="float: left;">Password</label>
-            <input class="form-control m-2" type="password" placeholder="Ingtroduzca su contraseña" [(ngModel)]="user.password">
-        
-            <button class="btn btn-primary btn-block m-2" (click)="login()">Ingresar</button>
-            <button class="btn btn-info btn-block m-2" (click)="loginWithGoogle()">Google</button>
-            <label>¿Aún no tienes cuenta?<a routerLink="/register">Registrarse</a></label>
-        
-            <div>
-                <button class="btn btn-info btn-block m2" (click)="getUserInfo()">Usuario Logeado</button>
-                <button class="btn btn-info btn-block m2" (click)="logout()">Logout</button>
-            </div>
-        </div>
+<div class="body">
+    <div class="superContainer">
+        <div class="form">
+            <h2>Login</h2>
+    
+            <form>
+                <div class="inputBox">
+                    <input class="form-control" type="email" placeholder="Introduzca su email" [(ngModel)]="user.email">
+                </div>
+    
+                <div class="inputBox">
+                    <input class="form-control" type="password" placeholder="Introduzca su contraseña" [(ngModel)]="user.password">
+                </div>
+    
+                <div class="inputBox">
+                    <input type="submit" (click)="login()" value="Login">
+                </div>
+                <div class="inputBox">
+                    <input type="submit" (click)="loginWithGoogle()" value="Google">
+                </div>
+    
+                <p>
+                    ¿Aún no tienes cuenta?
+                    <a routerLink="/register">Regístrate</a>
+                </p>
 
+                <div class="inputBox">
+                    <input type="submit" (click)="getUserInfo()" value="Usuario Loggeado">
+                </div>
+                <div class="inputBox">
+                    <input type="submit" (click)="logout()" value="Logout">
+                </div>
+            </form>
+        </div>
     </div>
 </div>
