--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,25 +1,32 @@
 <!-- <p>register works!</p> -->
 
-<div class="container">
-    <div class="card text-center">
+<div class="body">
+  <div class="superContainer">
+      <div class="form">
+          <h2>Registro</h2>
+  
+          <form>
+              <div class="inputBox">
+                  <input class="form-control" type="text" placeholder="Introduzca su nombre" [(ngModel)]="user.name">
+              </div>
 
-      <div class="card-header">
-        <b> REGISTRO</b>
+              <div class="inputBox">
+                <input class="form-control" type="email" placeholder="Introduzca su email" [(ngModel)]="user.email">
+            </div>
+  
+              <div class="inputBox">
+                  <input class="form-control" type="password" placeholder="Introduzca su contraseña" [(ngModel)]="user.password">
+              </div>
+  
+              <div class="inputBox">
+                  <input type="submit" (click)="register()" value="Registrar">
+              </div>
+  
+              <p>
+                  ¿Ya tienes cuenta?
+                  <a routerLink="/login">Acceder</a>
+              </p>
+          </form>
       </div>
-
-      <div class="card-body p-4">
-        <label style="float: left;">Nombre</label>
-        <input class="form-control m-2" type="email" placeholder="ingrese su nombre" [(ngModel)]="user.name">
-  
-        <label style="float: left;">Email</label>
-        <input class="form-control m-2" type="email" placeholder="ingrese su email" [(ngModel)]="user.email">
-  
-        <label style="float: left;">Password</label>
-        <input class="form-control m-2" type="password" placeholder="ingrese su password" [(ngModel)]="user.password">
-  
-        <button class="btn btn-primary btn-block m-2" (click)="register()">Registrar</button>
-        <label>Ya tenes cuenta? <a routerLink="/login">Ingresar</a></label>
-      </div>
-  
-    </div>
+  </div>
 </div>
