--- a/src/app/Books/add-book-fire/add-book-fire.component.html
+++ b/src/app/Books/add-book-fire/add-book-fire.component.html
@@ -2,44 +2,60 @@
 
 <mat-toolbar>Add a New Book | Firestore</mat-toolbar>
 
-<div class="add-book-form">
-    <a [routerLink]="['/book-list']">Back</a>
+<section>
+    <form class="superContainer" #myForm="ngForm" [formGroup]="bookForm" (ngSubmit)="createBook()">
+        <h2>Glassmorphing Contact Us Form</h2>
 
-    <form #myForm="ngForm" [formGroup]="bookForm" (ngSubmit)="createBook()">
-        <mat-form-field class="full-width">
-            <input matInput placeholder="Book Title" name="title" id="title" required formControlName="title">
-        </mat-form-field>
+        <div class="row100">
+            <div class="col">
+                <div class="inputBox">
+                    <input type="text" name="title" id="title" required formControlName="title">
+                    <span class="text">Title</span>
+                    <span class="line"></span>
+                </div>
+            </div>
 
-        <mat-form-field class="full-width">
-            <input matInput placeholder="Book Author" name="author" id="author" required formControlName="author">
-        </mat-form-field>
-
-        <mat-form-field class="full-width">
-            <input matInput placeholder="Book Price" type="number" name="price" id="price" required formControlName="price">
-        </mat-form-field>
-
-        <div>
-            <mat-form-field class="full-width">
-                <textarea matInput name="description" id="description" rows="5" placeholder="Book Description" formControlName="description"></textarea>
-            </mat-form-field>
-
-            <mat-form-field class="full-width">
-                <input matInput placeholder="Book Rate (1-5)" min="1" max="5" step="0.1" type="number" name="rate" id="rate" formControlName="rate">
-            </mat-form-field>
+            <div class="col">
+                <div class="inputBox">
+                    <input type="text" name="author" id="author" required formControlName="author">
+                    <span class="text">Author</span>
+                    <span class="line"></span>
+                </div>
+            </div>
         </div>
 
-        <mat-form-field class="third-width">
-            <input matInput placeholder="Image URL (enter image URL)" type="url" name="imagePortada" id="imagePortada" required formControlName="imagePortada">
-        </mat-form-field>
-        <br>
+        <div class="row100">
+            <div class="col">
+                <div class="inputBox">
+                    <input type="number" name="price" id="price" required formControlName="price">
+                    <span class="text">Price</span>
+                    <span class="line"></span>
+                </div>
+            </div>
 
-        <!-- <img src="{{book.data.imagePortada}}"> -->
-        <br>
-        <hr>
+            <div class="col">
+                <div class="inputBox">
+                    <input type="url" name="imagePortada" id="imagePortada" required formControlName="imagePortada">
+                    <span class="text">Image URL</span>
+                    <span class="line"></span>
+                </div>
+            </div>
+        </div>
 
-        <button class="a" value="submit" [disabled]="!myForm.form.valid">Create Book</button>
+        <div class="row100">
+            <div class="col">
+                <div class="inputBox textarea">
+                    <textarea required="required" name="description" id="description" rows="5" formControlName="description"></textarea>
+                    <span class="text">Description ...</span>
+                    <span class="line"></span>
+                </div>
+            </div>
+        </div>
 
-        <br><br>
-
+        <div class="row100">
+            <div class="col">
+                <input type="submit" value="submit" [disabled]="!myForm.form.valid">
+            </div>
+        </div>
     </form>
-</div>
+</section>
