implementing dark mode - part 1

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,15 +7,6 @@
         <div class="spacer1"></div>
 
         <ul>
-            <!-- <li class="list" *ngIf="userInfo | async as user">
-                <a [routerLink]="['/']">
-                    <span class="icon material-icons">
-                        home
-                    </span>
-                    <span class="text">Home</span>
-                </a>
-            </li> -->
-
             <li class="list" *ngIf="userInfo | async as user">
                 <a [routerLink]="['/']">
                     <span class="icon material-icons">
@@ -81,6 +72,10 @@
 
             <div class="spacer2"></div>
 
+            <button class="toggle" (click)="switchTheme()">
+                {{ theme === "light-theme" ? "Switch to dark theme" : "Switch to light theme"}}
+            </button>
+
             <div ngbDropdown class="d-inline-block" *ngIf="userInfo | async as user; else LoginButton">
                 <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>
                     <img style="border-radius: 100%;" *ngIf="user.photoURL" src="{{user.photoURL}}" width="30" height="30"
@@ -96,8 +91,5 @@
             <ng-template #LoginButton>
                 <button class="btn btn-primary" routerLink="/login">Login</button>
             </ng-template>
-
-            
-
         </ul>
     </div>
