--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,3 +103,40 @@ div.footer>a{
 /************************** clientes ******************************/
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "../src/assets/font-awesome/css/font-awesome.min.css";
+
+/*************************** Dark Mode *************************/
+
+.light-theme {
+    --background-color: #f5f5f5;
+    --text-color: #1a1a1a;
+    --box-color: #fff;
+    --button-color: #fff;
+
+    --box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+}
+
+.dark-theme {
+    --background-color: #1a1a1a;
+    --text-color: #f5f5f5;
+    --box-color: #2b2b2b;
+    --button-color: #1a1a1a;
+}
+
+body {
+    background-color: var(--background-color);
+    transition: all 0.3s ease-in-out;
+}
+
+.toggle {
+    position: relative;
+    top: 5%;
+    right: 5%;
+    outline: none;
+    border: 0;
+    cursor: pointer;
+    padding: 10px 15px;
+    border-radius: 9px;
+    background-color: var(--text-color);
+    color: var(--button-color);
+    transition: all 0.1s ease;
+}
