implementing dark mode - part 2

--- a/src/app/Books/add-book-fire/add-book-fire.component.html
+++ b/src/app/Books/add-book-fire/add-book-fire.component.html
@@ -1,6 +1,6 @@
 <!-- <p>add-book-fire works!</p> -->
 
-<mat-toolbar>Add a New Book | Firestore</mat-toolbar>
+<mat-toolbar class="toolbar-title">Add a New Book | Firestore</mat-toolbar>
 
 <section>
     <form class="superContainer" #myForm="ngForm" [formGroup]="bookForm" (ngSubmit)="createBook()">
