--- a/src/app/Books/add-book/add-book.component.html
+++ b/src/app/Books/add-book/add-book.component.html
@@ -1,6 +1,6 @@
 <!-- <p>add-book works!</p> -->
 
-<mat-toolbar>Add a New Book</mat-toolbar>
+<mat-toolbar class="toolbar-title">Add a New Book</mat-toolbar>
 
 <div class="add-book-form">
     <a [routerLink]="['/book-list']">Back</a>
