--- a/src/app/Books/book-details/book-details.component.html
+++ b/src/app/Books/book-details/book-details.component.html
@@ -1,6 +1,6 @@
 <!-- <p>book-details works!</p> -->
 
-<mat-toolbar *ngIf="esFirestore()"> Book Details | Firestore</mat-toolbar>
+<mat-toolbar class="toolbar-title" *ngIf="esFirestore()">Book Details | Firestore</mat-toolbar>
 
 <div class="details" *ngIf="esFirestore()">
     <div class="card" *ngIf="book">
