--- a/src/app/Books/book-details/book-details.component.scss
+++ b/src/app/Books/book-details/book-details.component.scss
@@ -107,6 +107,7 @@ a:hover span {
     display: flex;
     align-items: center;
     border-radius: 20px;
+    background: var(--background-color);
     transition: 0.5s;
 }
 
