--- a/src/app/Books/delete-book-fire/delete-book-fire.component.html
+++ b/src/app/Books/delete-book-fire/delete-book-fire.component.html
@@ -1,7 +1,7 @@
 <!-- <p>delete-book-fire works!</p> -->
 
 
-<mat-toolbar color="warn"> Delete confirmation </mat-toolbar>
+<mat-toolbar class="toolbar-title" color="warn"> Delete confirmation </mat-toolbar>
 
 <div class="delete-confirm" *ngIf="book">
 
