--- a/src/app/Books/edit-book-fire/edit-book-fire.component.html
+++ b/src/app/Books/edit-book-fire/edit-book-fire.component.html
@@ -1,6 +1,6 @@
 <!-- <p>edit-book-fire works!</p> -->
 
-<mat-toolbar>Edit Book | Firestore</mat-toolbar>
+<mat-toolbar class="toolbar-title">Edit Book | Firestore</mat-toolbar>
 
 <div class="edit-book-form">
     <a [routerLink]="['/book-list']">Back</a>
