--- a/src/app/Books/edit-book-rtdb/edit-book-rtdb.component.html
+++ b/src/app/Books/edit-book-rtdb/edit-book-rtdb.component.html
@@ -1,6 +1,6 @@
 <!-- <p>edit-book-rtdb works!</p> -->
 
-<mat-toolbar>Edit Book | RealTimeDB</mat-toolbar>
+<mat-toolbar class="toolbar-title">Edit Book | RealTimeDB</mat-toolbar>
 
 <div class="edit-book-form" *ngIf="book">
     <a [routerLink]="['/book-list']">Back</a>
