--- a/src/app/Customers/delete-customer/delete-customer.component.html
+++ b/src/app/Customers/delete-customer/delete-customer.component.html
@@ -1,6 +1,6 @@
 <!-- <p>delete-customer works!</p> -->
 
-<mat-toolbar color="warn"> Delete confirmation </mat-toolbar>
+<mat-toolbar class="toolbar-title" color="warn"> Delete confirmation </mat-toolbar>
 
 <div class="delete-confirm" *ngIf="customer">
 
