--- a/src/app/Customers/edit-customer/edit-customer.component.html
+++ b/src/app/Customers/edit-customer/edit-customer.component.html
@@ -1,6 +1,6 @@
 <!-- <p>edit-customer works!</p> -->
 
-<mat-toolbar>Edit Customer</mat-toolbar>
+<mat-toolbar class="toolbar-title">Edit Customer</mat-toolbar>
 
 <div class="edit-customer-form">
     <a [routerLink]="['/clientes-v2']">Back</a>
