--- a/src/app/components/crear-prestamo-fire/crear-prestamo-fire.component.html
+++ b/src/app/components/crear-prestamo-fire/crear-prestamo-fire.component.html
@@ -1,6 +1,6 @@
 <!-- <p>crear-prestamo-fire works!</p> -->
 
-<mat-toolbar>Crear Préstamo para el libro: {{ book.data.title }}</mat-toolbar>
+<mat-toolbar class="toolbar-title">Crear Préstamo para el libro: {{ book.data.title }}</mat-toolbar>
 
 <div class="add-book-form" *ngIf="customers != null || customers != undefined">
     <a [routerLink]="['/book-list']">Back</a>
