--- a/src/app/components/lista-prestamos/lista-prestamos.component.html
+++ b/src/app/components/lista-prestamos/lista-prestamos.component.html
@@ -1,6 +1,6 @@
 <!-- <p>lista-prestamos works!</p> -->
 
-<br>
+<mat-toolbar class="toolbar-title">Bookings List | Firestore</mat-toolbar>
 
 <div class="superContainer">
 
