--- a/src/app/Books/add-book-rtdb/add-book-rtdb.component.html
+++ b/src/app/Books/add-book-rtdb/add-book-rtdb.component.html
@@ -1,48 +1,6 @@
 <!-- <p>add-book-rtdb works!</p> -->
 
-<mat-toolbar>Add a New Book | RealTimeDB</mat-toolbar>
-
-<!-- <div class="add-book-form" *ngIf="!submitted">
-    <a [routerLink]="['/book-list']">Back</a>
-
-    <form #myForm="ngForm">
-        <mat-form-field class="full-width">
-            <input matInput placeholder="Book Title" name="title" id="title"  required [(ngModel)]="book.title">
-        </mat-form-field>
-
-        <mat-form-field class="full-width">
-            <input matInput placeholder="Book Author" name="author" id="author"  required [(ngModel)]="book.author">
-        </mat-form-field>
-
-        <mat-form-field class="full-width">
-            <input matInput placeholder="Book Price" type="number" name="price" id="price"  required [(ngModel)]="book.price">
-        </mat-form-field>
-
-        <div>
-            <mat-form-field class="full-width">
-                <textarea matInput name="description" id="description" rows="5" placeholder="Book Description"  [(ngModel)]="book.description"></textarea>
-            </mat-form-field>
-
-            <mat-form-field class="full-width">
-                <input matInput placeholder="Book Rate (1-5)" min="1" max="5" step="0.1" type="number" name="rate" id="rate"  [(ngModel)]="book.rate">
-            </mat-form-field>
-        </div>
-
-        <mat-form-field class="third-width">
-            <input matInput placeholder="Image URL (enter image URL)" type="url" name="imagePortada" id="imagePortada"  required [(ngModel)]="book.imagePortada">
-        </mat-form-field>
-        <br>
-
-        <img src="{{book.imagePortada}}">
-        <br>
-        <hr>
-
-        <button class="a" (click)="saveBook()" [disabled]="!myForm.form.valid">Save Book</button>
-
-        <br><br>
-
-    </form>
-</div> -->
+<mat-toolbar class="toolbar-title">   Add a New Book | RealTimeDB</mat-toolbar>
 
 <section *ngIf="!submitted">
     <form class="superContainer" #myForm="ngForm">
