--- a/src/app/Books/book-list/book-list.component.scss
+++ b/src/app/Books/book-list/book-list.component.scss
@@ -28,6 +28,7 @@
     height: 400px;
     margin: 40px;
     background: #232323;
+    // background: var(--background-color);
     border-radius: 20px;
     transform-style: preserve-3d;
 }
@@ -39,7 +40,8 @@
     left: 20px;
     font-size: 6em;
     font-weight: 900;
-    color: #fff;
+    // color: #fff;
+    color: var(--text-color);
     font-style: italic;
     opacity: 0;
     transition: 0.5s;
@@ -52,7 +54,8 @@
     right: 20px;
     font-size: 5em;
     font-weight: 900;
-    color: #fff;
+    // color: #fff;
+    color: var(--text-color);
     font-style: italic;
     opacity: 0;
     transition: 0.5s;
