--- a/src/app/Books/delete-book/delete-book.component.html
+++ b/src/app/Books/delete-book/delete-book.component.html
@@ -1,6 +1,6 @@
 <!-- <p>delete-book works!</p> -->
 
-<mat-toolbar color="warn"> Delete confirmation </mat-toolbar>
+<mat-toolbar class="toolbar-title" color="warn"> Delete confirmation </mat-toolbar>
 
 <div class="delete-confirm" *ngIf="book">
 
