--- a/src/app/Customers/add-customer/add-customer.component.html
+++ b/src/app/Customers/add-customer/add-customer.component.html
@@ -1,6 +1,6 @@
 <!-- <p>add-customer works!</p> -->
 
-<mat-toolbar>Add a New Customer | Firestore</mat-toolbar>
+<mat-toolbar class="toolbar-title">Add a New Customer | Firestore</mat-toolbar>
 
 <section>
     <form class="superContainer" #myForm="ngForm" [formGroup]="customerForm" (ngSubmit)="createCustomer()">
