--- a/src/app/Customers/clientes-v2/clientes-v2.component.html
+++ b/src/app/Customers/clientes-v2/clientes-v2.component.html
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<mat-toolbar>Customer List | Firestore</mat-toolbar>
+<mat-toolbar class="toolbar-title">Customer List | Firestore</mat-toolbar>
 
 <div class="body">
     <div class="container" *ngIf="allCustomersFirestore != null || allCustomersFirestore != undefined">
