--- a/src/app/Customers/customer-details/customer-details.component.html
+++ b/src/app/Customers/customer-details/customer-details.component.html
@@ -1,6 +1,6 @@
 <!-- <p>customer-details works!</p> -->
 
-<mat-toolbar> Customer Details | Firestore</mat-toolbar>
+<mat-toolbar class="toolbar-title"> Customer Details | Firestore</mat-toolbar>
 
 <div class="superContainer" *ngIf="isRouteOk()">
 
