--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -22,11 +22,11 @@ li {
     position: relative;
     width: 100%;
     height: 70px;
-    background: rgb(255, 255, 255);
+    // background: rgb(255, 255, 255);
+    background: var(--background-color);
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border-radius: 10px; */
     padding-top: 60px;
     padding-bottom: 40px;
 }
@@ -44,8 +44,6 @@ li {
     width: 70px;
     height: 70px;
     z-index: 1;
-    /* margin-right: 10px; */
-    /* margin-bottom: -30px; */
 }
 
 .navigation ul li a {
@@ -67,7 +65,8 @@ li {
     font-size: 2em;
     text-align: center;
     transition: 0.5s;
-    color: #222327;
+    // color: #222327;
+    color: var(--text-color);
 }
 
 .navigation ul li:hover a .icon {
@@ -76,7 +75,8 @@ li {
 
 .navigation ul li a .text {
     position: absolute;
-    color: #222327;
+    // color: #222327;
+    color: var(--text-color);
     font-weight: 400;
     font-size: 1em;
     letter-spacing: 0.05em;
@@ -88,4 +88,64 @@ li {
 .navigation ul li:hover a .text {
     opacity: 1;
     transform: translateY(10px);
+}
+
+/******************** Dark Mode Toggle Button ********************/
+
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    visibility: hidden;
+    display: none;
+}
+
+.check {
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 20px;
+    background: #092c3e;
+    cursor: pointer;
+    border-radius: 20px;
+    overflow: hidden;
+    transition: ease-in 0.5s;
+    right: 20px;
+    top: 3px;
+}
+
+input[type="checkbox"]:checked ~ .check {
+    background: #fff;
+    // box-shadow: 0 0 0 1200px #092c3e;
+}
+
+.check:before {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    background: #fff;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+
+input[type="checkbox"]:checked ~ .check:before {
+    transform: translateX(-50px);
+}
+
+.check:after {
+    content: '';
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    background: #092c3e;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    transition: 0.5s;
+    transform: translateX(50px);
+}
+
+input[type="checkbox"]:checked ~ .check:after {
+    transform: translateX(0px);
 }
