--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,7 @@ md-grid-tile{
     margin:0 auto;
     padding: 2em;
     box-shadow: 0 0 1px black;
+    height: 40vh;
 }
 
 .edit-book-form{
@@ -52,7 +53,7 @@ md-grid-tile{
 .left{float: left}
 .right{float: left; padding: 25px;}
 
-.delete-confirm{margin:0 auto; width: 70%;}
+.delete-confirm{margin:0 auto; width: 70%; height: 40vh; overflow-x: hidden;}
 .details-book{ margin:0 auto; width: 60%;height: 100vh }
 .bookTile{padding:25px auto;}
 .editButton{
@@ -116,7 +117,8 @@ div.footer>a{
 }
 
 .dark-theme {
-    --background-color: #1a1a1a;
+    // --background-color: #1a1a1a;
+    --background-color: #001923;
     --text-color: #f5f5f5;
     --box-color: #2b2b2b;
     --button-color: #1a1a1a;
@@ -127,6 +129,13 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+.toolbar-title {
+    background: var(--background-color);
+    color: var(--text-color);
+    transition: all 0.3s ease-in-out;
+}
+
+/*
 .toggle {
     position: relative;
     top: 5%;
@@ -140,3 +149,4 @@ body {
     color: var(--button-color);
     transition: all 0.1s ease;
 }
+*/
